2002-05-31  Richard Boulton <richard@tartarus.org>

	Fix PR automake/326:
	* automake.in (define_objects_from_sources): Calculate the result in
	all conditions before passing this to subobjname to pick a name to
	store the result in.
	(subobjname): Expect a list of condition/value pairs as input.
	Combine this list and use it as the key to determine the variable name.
	* test/cond22.test: New file.
	* tests/Makefile.am (TESTS): Add cond21.test

2002-05-30  Paul Eggert  <eggert@twinsun.com>

	* lib/am/distdir.am (distdir): Don't assume that 'grep -F' works;
	instead, use shell pattern matching.

2002-05-29  Paul Eggert  <eggert@twinsun.com>

	Don't assume that egrep and fgrep exist, as POSIX 1003.1-2001 no
	longer requires them.

	* Makefile.am (maintainer-check): Use grep -E and grep -F instead
	of egrep and fgrep.  Omit unnecessary -E and -F.
	Fix quoting typo -- "fgrep '\$${'" should have been "fgrep '$${'".
	* lib/am/distdir.am (distdir): fgrep -> grep -F.
	Use $(), not ${}, for Make variables.
	* lib/am/texinfos.am (install-info-am, uninstall-info-am):
	fgrep -> grep
	* m4/make.m4 (AM_MAKE_INCLUDE): Likewise.
	* tests/defs: Set FGREP and EGREP.

	* tests/aclocali.test, tests/acoutput2.test, tests/all.test,
	tests/ansi.test, tests/ansi4.test, tests/colon3.test,
	tests/cond21.test, tests/condlib.test, tests/confh4.test,
	tests/confsub.test, tests/cxxansi.test, tests/cxxo.test,
	tests/depend4.test, tests/discover.test, tests/distname.test,
	tests/dup3.test, tests/empty4.test, tests/fo.test,
	tests/implicit.test, tests/insh2.test, tests/interp.test,
	tests/lex.test, tests/lex3.test, tests/lex4.test,
	tests/libobj5.test, tests/libobj7.test, tests/make.test,
	tests/makevars.test, tests/nostdinc.test, tests/parse.test,
	tests/pluseq.test, tests/pluseq4.test, tests/pluseq6.test,
	tests/pr2.test, tests/pr9.test, tests/seenc.test,
	tests/specflags.test, tests/specflags3.test,
	tests/specflags6.test, tests/subobj.test, tests/subobj2.test,