@@ -50,6 +50,6 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE
 ./configure
-OBJEXT=oo $MAKE -e echo > output
+OBJEXT=oo $MAKE -e SHELL=/bin/sh echo > output
 cat output
 $FGREP 'BEG: one.oo two.oo three.oo three2.oo :END' output
