@@ -1,3 +1,9 @@
+2002-05-31  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* Makefile.am (maintainer-check): Check for egrep and fgrep.
+
+	* test/cond22.test: Set SHELL when calling $MAKE -e.
+
 2002-05-31  Richard Boulton <richard@tartarus.org>
 
 	Fix PR automake/326:
